--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.application.name=Personal_ChatBot
 spring.ai.ollama.base-url=http://localhost:11434
 spring.ai.ollama.chat.options.model=mistral
 spring.ai.ollama.chat.options.temperature=0.7
+server.port=9090
