--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=Personal_ChatBot
-spring.ai.ollama.base-url=http://localhost:11434
+spring.ai.ollama.base-url=https://6ebd-118-179-117-129.ngrok-free.app
+
 spring.ai.ollama.chat.options.model=mistral
 spring.ai.ollama.chat.options.temperature=0.7
 server.port=9090
