Hugging face Added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,2 @@
-spring.application.name=Personal_ChatBot
-spring.ai.ollama.base-url=https://6ebd-118-179-117-129.ngrok-free.app
-
-spring.ai.ollama.chat.options.model=mistral
-spring.ai.ollama.chat.options.temperature=0.7
-server.port=9090
+huggingface.api.key=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
+huggingface.api.url=https://api-inference.huggingface.co
