Cohore AI added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,7 @@
-huggingface.api.key=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
-huggingface.api.url=https://api-inference.huggingface.co
+#huggingface.api.key=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
+#huggingface.api.url=https://api-inference.huggingface.co
+
+
+cohere.api.key=Ips1X0XWEYCsAxLcEJpS6LIsAJVQYeNdvUjU2rTN
+
+server.port=8090
